--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "scripts": {
     "docs:dev": "vitepress dev docs",
+    "dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
-    "vitepress": "^1.1.0"
+    "vitepress": "^1.5.0"
   },
   "dependencies": {
     "markdown-it-mermaid": "^0.2.5"
